Päivityksiä asetteluun ja sisältöön.

--- a/index.html
+++ b/index.html
@@ -48,120 +48,130 @@
         <p class="lead">Paikallinen kauppakeskus Maskun kunnassa, Varsinais-Suomen sydämessä – arjen palvelut ja
           vahvat juuret samassa osoitteessa.</p>
 
-        <div id="aukiolo-widget"></div>
 
+        <div id="aukiolo-widget"></div>
+        <!-- Somelinkit -->
+        <div class="social-links" aria-label="Seuraa meitä somessa">
+          <a class="social-link instagram" href="https://www.instagram.com/maskunkauppakeskus/"
+            title="Maskun Kauppakeskus Instagramissa" target="_blank" rel="noopener nofollow external"
+            aria-label="Instagram – Maskun Kauppakeskus">
+            <img src="/assets/logot/instagram_logo.avif" alt="Instagram" loading="eager" fetchpriority="high" />
+            <span>Maskun Kauppakeskus Instagramissa</span>
+          </a>
+
+          <a class="social-link facebook" href="https://www.facebook.com/maskunkauppakeskus/"
+            title="Maskun Kauppakeskus Facebookissa" target="_blank" rel="noopener nofollow external"
+            aria-label="Facebook – Maskun Kauppakeskus">
+            <img src="/assets/logot/facebook_logo.avif" alt="Facebook" loading="eager" fetchpriority="high" />
+            <span>Maskun Kauppakeskus Facebookissa</span>
+          </a>
+        </div>
 
         <nav class="quick-nav" aria-label="Pikavalikko">
           <a class="btn" href="#hours">Aukioloajat</a>
           <a class="btn" href="#tenants">Liikkeet & palvelut</a>
           <a class="btn" href="#meista">Tietoa meistä</a>
           <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
-          <a class="btn" href="#yhteiso">Yhteisö & tapahtumat</a>
         </nav>
-      </div>
-      </div>
-    </section>
 
-    <section class="banner" aria-label="Kampanjakaruselli">
+      </div>
+      </div>
+
       <div class="carousel" id="carousel">
         <!-- JavaScript lisää tähän .track ja .slide -elementit -->
       </div>
+
+    </section>
+    <section class="tenants container">
+      <div class="content">
+        <h2>Liikkeet ja palvelut</h2>
+        <div class="logo-grid" id="">
+          <!-- TENANTS:START -->
+
+          <a class="tenant" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank"
+            rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" data-name="Aito-kauppa">
+            <span class="logo" style="--logo:url('./assets/logot/aitokauppa_logo.avif');"></span>
+            <span class="tenant-name">Aito-kauppa Maskun Luontaispuoti</span>
+          </a>
+          <a class="tenant" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/" target="_blank"
+            rel="noopener" aria-label="Davin Parturi" data-name="Davin Parturi">
+            <span class="logo" style="--logo:url('./assets/logot/davin_logo.avif');"></span>
+            <span class="tenant-name">Davin Parturi</span>
+          </a>
+          <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
+            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
+            <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
+            <span class="tenant-name">Kotipizza</span>
+          </a>
+          <a class="tenant" href="https://www.lunula.fi/" target="_blank" rel="noopener"
+            aria-label="Kauneushoitola Lunula" data-name="Lunula">
+            <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');"></span>
+            <span class="tenant-name">Kauneushoitola Lunula</span>
+          </a>
+          <a class="tenant" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
+            aria-label="Kiinteistö &amp; Notariaatti Ahtinen" data-name="Ahtinen">
+            <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');"></span>
+            <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
+          </a>
+          <a class="tenant" href="https://www.kotipizza.fi/ravintolat/masku-kankaisten-kauppatie-neste-k/"
+            target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Riviera">
+            <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');"></span>
+            <span class="tenant-name">Kahvilaravintola Riviera</span>
+          </a>
+          <a class="tenant" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Masku"
+            data-name="Masku">
+            <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');"></span>
+            <span class="tenant-name">Maskun Kalustetalo Humikkala</span>
+          </a>
+          <a class="tenant" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener"
+            aria-label="Mimosan kukka" data-name="Mimosan kukka">
+            <span class="logo" style="--logo:url('./assets/logot/mimosan_logo.avif');"></span>
+            <span class="tenant-name">Mimosan kukka</span>
+          </a>
+          <a class="tenant" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
+            aria-label="Oma Säästöpankki Masku" data-name="Oma Säästöpankki">
+            <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');"></span>
+            <span class="tenant-name">Oma Säästöpankki</span>
+          </a>
+          <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
+            aria-label="Taksi Hietanen" data-name="Taksi Hietanen">
+            <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');"></span>
+            <span class="tenant-name">Taksi Hietanen</span>
+          </a>
+          <!-- TENANTS:END -->
+        </div>
+        <div class="btns"><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></div>
+      </div>
     </section>
 
 
-    <!-- UUSI: Tietoa meistä -->
+
+
+
+    <!-- TIETOA MEISTÄ -->
     <section id="meista" class="about container">
       <div class="content">
-        <h2>Maskun Kauppa&shy;keskus – juuret Varsinais-Suomessa</h2>
+        <h2>Maskun Kauppakeskus – juuret Varsinais-Suomessa</h2>
         <p>
-          Maskun Kauppakeskus on kasvanut osaksi <strong>Varsinais-Suomen</strong> arkea ja elinvoimaa. Meille
-          <strong>Masku</strong> ei ole vain sijainti kartalla, vaan yhteisö, jonka tarpeista ja tarinoista kasvaa
-          kauppakeskuksemme identiteetti. Vaalimme paikallista palvelua, mutkatonta asiointia ja lämminhenkistä
-          kohtaamista – tuttua turkulaismaakunnan otetta, jossa laatu ja luotettavuus kulkevat käsi kädessä.
+          Maskun Kauppakeskus on juurtunut vahvasti Varsinais-Suomeen ja sen arkeen. Meille Masku on enemmän kuin
+          sijainti – se on yhteisö, jonka ihmiset, tarinat ja tarpeet luovat kauppakeskuksemme sydämen. Täällä
+          paikallisuus, mutkaton asiointi ja lämminhenkinen kohtaaminen kulkevat käsi kädessä.
         </p>
         <p>
-          Kauppakeskuksen valikoima rakentuu arjen peruspalveluista, hyvinvoinnista, kodista ja sujuvasta liikkumisesta.
-          Haluamme, että asiointi on helppoa: selkeät tilat, esteetön kulku ja ilmainen pysäköinti tekevät
-          piipahduksesta
-          tai viikonloppukäynnistä vaivatonta.
+          Kauppakeskuksemme palvelut on suunniteltu helpottamaan arkea: ruokaa ja hyvinvointia, kodin ratkaisuja ja
+          liikkumisen palveluja. Selkeät tilat, esteetön kulku ja maksuton pysäköinti tekevät asioinnista vaivatonta,
+          olipa kyse nopeasta piipahduksesta tai rauhallisesta viikonloppuhetkestä.
+
+        </p>
+        <p>
+          Maskun historia ja yrittäjähenkisyys näkyvät myös meidän toiminnassamme. Teemme yhteistyötä paikallisten
+          yritysten kanssa, vahvistamme alueen osaamista ja rakennamme palveluita kestävällä ja pitkäjänteisellä
+          otteella.
+
         </p>
       </div>
     </section>
 
-    <!-- UUSI: Juuritarina -->
-    <section class="heritage container">
-      <div class="content">
-        <h2>Vahvat juuret, paikallinen ote</h2>
-        <p>
-          Masku tunnetaan historiastaan ja yrittäjähenkisyydestään. Sama henki näkyy kauppakeskuksemme toiminnassa:
-          suosimme paikallisia kumppanuuksia, tuemme alueen pienyrittäjiä ja tuomme esiin Varsinais-Suomen osaamista.
-          Yhteinen tavoitteemme on kasvattaa palveluita pitkäjänteisesti – kestävästi, lähellä ja ihmisiä kuunnellen.
-        </p>
-        <ul class="pill-list" aria-label="Arvot">
-          <li>Paikallisuus &amp; luotettavuus</li>
-          <li>Helppo arki &amp; sujuva asiointi</li>
-          <li>Kestävä kehitys &amp; pitkä yhteistyö</li>
-        </ul>
-      </div>
-    </section>
-
-<section class="tenants container">
-  <div class="content">
-    <h2>Liikkeet ja palvelut</h2>
-    <div class="logo-grid" id="">
-      <!-- TENANTS:START -->
-      <a class="tenant" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener"
-        aria-label="OmaSp Masku" data-name="OmaSp">
-        <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');"></span>
-        <span class="tenant-name">OmaSp</span>
-      </a>
-
-      <a class="tenant" href="https://www.ahtinen.com/" target="_blank" rel="noopener"
-        aria-label="Kiinteistö &amp; Notariaatti Ahtinen" data-name="Ahtinen">
-        <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');"></span>
-        <span class="tenant-name">Kiinteistö &amp; Notariaatti Ahtinen</span>
-      </a>
-
-      <a class="tenant" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener"
-        aria-label="Mimosan kukka" data-name="Mimosan kukka">
-        <span class="logo" style="--logo:url('./assets/logot/mimosan_logo.avif');"></span>
-        <span class="tenant-name">Mimosan kukka</span>
-      </a>
-
-      <a class="tenant" href="https://www.lunula.fi/" target="_blank" rel="noopener"
-        aria-label="Kauneushoitola Lunula" data-name="Lunula">
-        <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');"></span>
-        <span class="tenant-name">Kauneushoitola Lunula</span>
-      </a>
-
-      <a class="tenant" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Masku"
-        data-name="Masku">
-        <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');"></span>
-        <span class="tenant-name">Maskun Kalustetalo Humikkala</span>
-      </a>
-
-      <a class="tenant" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener"
-        aria-label="Taksi Hietanen" data-name="Taksi Hietanen">
-        <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');"></span>
-        <span class="tenant-name">Taksi Hietanen</span>
-      </a>
-
-      <a class="tenant" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank"
-        rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" data-name="Aito-kauppa">
-        <span class="logo" style="--logo:url('./assets/logot/aitokauppa_logo.avif');"></span>
-        <span class="tenant-name">Aito-kauppa Maskun Luontaispuoti</span>
-      </a>
-
-      <a class="tenant" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/"
-        target="_blank" rel="noopener" aria-label="Kotipizza" data-name="Kotipizza">
-        <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');"></span>
-        <span class="tenant-name">Kahvilaravintola Riviera &amp; Kotipizza</span>
-      </a>
-      <!-- TENANTS:END -->
-    </div>
-    <div class="btns"><a class="btn" href="./liikkeet-ja-palvelut.html">Näytä kaikki liikkeet &raquo;</a></div>
-  </div>
-</section>
 
 
     <!-- UUSI: Sijainti ja saavutettavuus -->
@@ -169,6 +179,9 @@
 
       <div class="content">
         <h2>Sijainti & saapuminen</h2>
+        <p>Maskun Kauppakeskus sijaitsee keskeisellä paikalla Maskuntiellä, jonne on helppo saapua niin autolla,
+          pyörällä kuin joukkoliikenteelläkin. Vaihtoehtoja liikkumiseen löytyy runsaasti – voit hyödyntää
+          reittiopaspalveluja, paikallisia takseja tai kyytipalveluita päästäksesi kätevästi perille.</p>
         <div id="ARRIVAL">
           <!-- ARRIVAL:START -->
           <section aria-labelledby="destination-coords">
@@ -201,6 +214,7 @@
                 </a>
               </li>
             </ul>
+
           </section>
 
           <section aria-labelledby="public-transport">
@@ -243,57 +257,15 @@
           </section>
 
           <!-- ARRIVAL:END -->
-
+          <h2>Pysäköinti</h2>
+          <p>Maskun Kauppakeskukseen on helppo saapua omalla autolla, ja pysäköinti on asiakkaille täysin ilmaista.
+            Laajalta pysäköintialueelta löytyy runsaasti tilaa, joten auton saa jätettyä kätevästi aivan liikkeiden
+            läheisyyteen. Tämä tekee asioinnista vaivatonta ja nopeaa.</p>
         </div>
     </section>
 
-    <!-- UUSI: Yhteisö ja tapahtumat -->
-    <section id="yhteiso" class="community container">
-      <div class="content">
-        <h2>Yhteisön keskellä – tapahtumia Varsinais-Suomessa</h2>
-        <p>
-          Järjestämme pitkin vuotta paikallisia tempauksia, kausimyyjäisiä ja perhetapahtumia. Tavoitteemme on tuoda
-          yhteen maskulaiset, lähialueiden asukkaat ja yrittäjät – rakentaa arkeen iloa ja hyötyä saman katon alle.
-        </p>
-        <div class="feature-cards">
-          <article class="card">
-            <h3>Paikalliset kumppanit</h3>
-            <p>Teemme yhteistyötä seurojen, yhdistysten ja yrittäjien kanssa. Jos sinulla on tapahtumaidea, tule
-              juttelemaan!</p>
-          </article>
-          <article class="card">
-            <h3>Kestävä arki</h3>
-            <p>Panostamme kierrätyspisteisiin ja energiatehokkuuteen. Pienillä teoilla rakennamme vastuullista
-              tulevaisuutta
-              Maskussa.</p>
-          </article>
-          <article class="card">
-            <h3>Perheille</h3>
-            <p>Tilavat käytävät, lastenhoitotilat ja selkeät opasteet tekevät asioinnista huoletonta kaikenikäisille.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
 
-    <section class="hours container">
-      <div class="content">
-        <div class="container">
-          <h2>Aukioloajat</h2>
-          <div id="">
-            <!-- HOURS:START -->
-            <ul class="hours-list" data-editor-target="" style="position: relative;">
-              <li><strong>Ma–Pe</strong>: klo 10–20</li>
-              <li><strong>La</strong>: klo 10–18</li>
-              <li><strong>Su</strong>: klo 12–18</li>
-              <!-- HOURS:END -->
-            </ul>
-          </div>
-          <p class="muted">Huom. Yksittäisillä liikkeillä voi olla poikkeavat aukioloajat – tarkista liikkeen sivulta.
-          </p>
-        </div>
-      </div>
-    </section>
+
 
     <!-- UUSI: Kutsu toimintaan -->
     <section class="cta container" aria-label="Ota yhteyttä">
@@ -317,33 +289,38 @@
 
   <!-- Structured Data: ShoppingCenter -->
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ShoppingCenter",
-    "@id": "https://maskunkauppakeskus.fi/#shoppingcenter",
-    "name": "Maskun Kauppakeskus",
-    "url": "https://maskunkauppakeskus.fi/",
-    "description": "Paikallinen kauppakeskus Maskussa, Varsinais-Suomessa – liikkeet, palvelut ja tapahtumat.",
-    "image": "https://maskunkauppakeskus.fi/assets/og-image.jpg",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Masku",
-      "addressRegion": "Varsinais-Suomi",
-      "addressCountry": "FI"
-    },
-    "openingHoursSpecification": [
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"], "opens": "10:00", "closes": "20:00" },
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Saturday", "opens": "10:00", "closes": "18:00" },
-      { "@type": "OpeningHoursSpecification", "dayOfWeek": "Sunday", "opens": "12:00", "closes": "18:00" }
-    ],
-    "amenityFeature": [
-      { "@type": "LocationFeatureSpecification", "name": "Ilmainen pysäköinti", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "Esteetön kulku", "value": true },
-      { "@type": "LocationFeatureSpecification", "name": "Pyöräpaikat", "value": true }
-    ],
-    "areaServed": "Varsinais-Suomi"
-  }
-  </script>
+{
+  "@context": "https://schema.org",
+  "@type": "ShoppingCenter",
+  "@id": "https://maskunkauppakeskus.fi/#shoppingcenter",
+  "name": "Maskun Kauppakeskus",
+  "url": "https://maskunkauppakeskus.fi/",
+  "description": "Paikallinen kauppakeskus Maskussa, Varsinais-Suomessa – liikkeet, palvelut ja tapahtumat.",
+  "image": "https://maskunkauppakeskus.fi/assets/og-image.jpg",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Masku",
+    "addressRegion": "Varsinais-Suomi",
+    "addressCountry": "FI"
+  },
+  "openingHoursSpecification": [
+    { "@type": "OpeningHoursSpecification", "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"], "opens": "10:00", "closes": "20:00" },
+    { "@type": "OpeningHoursSpecification", "dayOfWeek": "Saturday", "opens": "10:00", "closes": "18:00" },
+    { "@type": "OpeningHoursSpecification", "dayOfWeek": "Sunday", "opens": "12:00", "closes": "18:00" }
+  ],
+  "amenityFeature": [
+    { "@type": "LocationFeatureSpecification", "name": "Ilmainen pysäköinti", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "Esteetön kulku", "value": true },
+    { "@type": "LocationFeatureSpecification", "name": "Pyöräpaikat", "value": true }
+  ],
+  "areaServed": "Varsinais-Suomi",
+  "sameAs": [
+    "https://www.instagram.com/maskunkauppakeskus/",
+    "https://www.facebook.com/maskunkauppakeskus/"
+  ]
+}
+</script>
+
 
   <!-- Optional Breadcrumbs for SEO (päivitä polut sivustorakenteen mukaan) -->
   <script type="application/ld+json">
