--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <nav class="quick-nav" aria-label="Pikavalikko">
           <a class="btn" href="#hours">Aukioloajat</a>
           <a class="btn" href="#tenants">Liikkeet & palvelut</a>
-          <a class="btn" href="#meista">Tietoa meistä</a>
+          <a class="btn" href="https://lounaat.info/lounas/kahvilaravintola-riviera/masku" target="_blank">Lounaslista</a>          <a class="btn" href="#meista">Tietoa meistä</a>
           <a class="btn" href="#sijainti">Sijainti & saapuminen</a>
         </nav>
 
