Lisätty lisätietoja liikkeistä.

--- a/liikkeet-ja-palvelut.html
+++ b/liikkeet-ja-palvelut.html
@@ -1,30 +1,322 @@
 <!DOCTYPE html>
 <html lang="fi">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Liikkeet ja palvelut – Maskun Kauppakeskus</title>
+  <meta name="description" content="Maskun Kauppakeskuksen liikkeet ja palvelut: Aito-kauppa, Davin Parturi, Kahvilaravintola Riviera, Kauneushoitola Lunula, Kiinteistö & Notariaatti Ahtinen, Kotipizza, Maskun Kalustetalo Humikkala, Mimosan kukka, Oma Säästöpankki ja Taksi Hietanen." />
+  <link rel="canonical" href="https://www.esimerkki.fi/liikkeet-ja-palvelut.html" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Liikkeet ja palvelut – Maskun Kauppakeskus" />
+  <meta property="og:description" content="Tutustu kaikkiin liikkeisiin ja palveluihin yhdellä sivulla." />
+  <meta property="og:url" content="https://www.esimerkki.fi/liikkeet-ja-palvelut.html" />
+  <meta property="og:image" content="https://www.esimerkki.fi/assets/share-liikkeet.avif" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Liikkeet ja palvelut – Maskun Kauppakeskus" />
+  <meta name="twitter:description" content="Tutustu kaikkiin liikkeisiin ja palveluihin yhdellä sivulla." />
+  <meta name="twitter:image" content="https://www.esimerkki.fi/assets/share-liikkeet.avif" />
+
+  <!-- Schema.org JSON-LD: sivu + lista liikkeistä -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "WebPage",
+        "name": "Liikkeet ja palvelut – Maskun Kauppakeskus",
+        "url": "https://www.esimerkki.fi/liikkeet-ja-palvelut.html",
+        "description": "Maskun Kauppakeskuksen liikkeet ja palvelut."
+      },
+      {
+        "@type": "ItemList",
+        "name": "Liikkeet ja palvelut",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+              "@type": "LocalBusiness",
+              "name": "Aito-kauppa Maskun Luontaispuoti",
+              "url": "https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti",
+              "image": "https://www.esimerkki.fi/assets/logot/aitokauppa_logo.avif",
+              "sameAs": ["https://aitokauppa.fi/"]
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "item": {
+              "@type": "HairSalon",
+              "name": "Davin Parturi",
+              "url": "https://www.facebook.com/people/Davin-Parturi/100094396887184/",
+              "image": "https://www.esimerkki.fi/assets/logot/davin_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "item": {
+              "@type": "CafeOrCoffeeShop",
+              "name": "Kahvilaravintola Riviera",
+              "url": "https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/",
+              "image": "https://www.esimerkki.fi/assets/logot/riviera_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "item": {
+              "@type": "BeautySalon",
+              "name": "Kauneushoitola Lunula",
+              "url": "https://www.lunula.fi/",
+              "image": "https://www.esimerkki.fi/assets/logot/lunula_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 5,
+            "item": {
+              "@type": "ProfessionalService",
+              "name": "Kiinteistö & Notariaatti Ahtinen",
+              "url": "https://www.ahtinen.com/",
+              "image": "https://www.esimerkki.fi/assets/logot/ahtinen_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 6,
+            "item": {
+              "@type": "Restaurant",
+              "name": "Kotipizza",
+              "url": "https://www.kotipizza.fi/ravintolat/masku-maskuntie/",
+              "image": "https://www.esimerkki.fi/assets/logot/kotipizza_logo.avif",
+              "sameAs": ["https://www.kotipizza.fi/"]
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 7,
+            "item": {
+              "@type": "FurnitureStore",
+              "name": "Maskun Kalustetalo Humikkala",
+              "url": "https://www.masku.com/",
+              "image": "https://www.esimerkki.fi/assets/logot/masku_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 8,
+            "item": {
+              "@type": "Florist",
+              "name": "Mimosan kukka",
+              "url": "https://www.mimosankukka.fi/",
+              "image": "https://www.esimerkki.fi/assets/logot/mimosan_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 9,
+            "item": {
+              "@type": "BankOrCreditUnion",
+              "name": "Oma Säästöpankki",
+              "url": "https://www.omasp.fi/konttorit/masku",
+              "image": "https://www.esimerkki.fi/assets/logot/omasp_logo.avif"
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 10,
+            "item": {
+              "@type": "TaxiService",
+              "name": "Taksi Hietanen",
+              "url": "https://www.taksihietanen.fi/",
+              "image": "https://www.esimerkki.fi/assets/logot/taksihietanen_logo.avif"
+            }
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+
   <link rel="stylesheet" href="./styles.css" />
 </head>
-
 <body>
   <header id="site-header" data-partial="./partials/header.html"></header>
 
+  <main class="container section section--inner">
+    <h1 data-text="Liikkeet ja palvelut">Liikkeet ja palvelut</h1>
 
-  <main class="container">
-    <h1>Liikkeet ja palvelut</h1>
-    <div id="TENANTS">
+
+
+    <div id="TENANTS" class="tenant-list">
       <!-- TENANTS:START -->
-      <p>Lisätään sisältö Python-skriptillä.</p>
+
+      <article id="aito-kauppa" class="tenant-card" itemscope itemtype="https://schema.org/LocalBusiness">
+        <a class="tenant-card__logo" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank" rel="noopener" aria-label="Aito-kauppa Maskun Luontaispuoti" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/aitokauppa_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Aito-kauppa Maskun Luontaispuoti</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Luontaistuotteita, ravintolisiä ja arjen hyvinvointia edistäviä tuotteita. Asiantuntevaa, ystävällistä palvelua ja vinkkejä parempaan oloon.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://aitokauppa.fi/pages/aito-kauppa-masku-maskun-luontaispuoti" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="davin-parturi" class="tenant-card" itemscope itemtype="https://schema.org/HairSalon">
+        <a class="tenant-card__logo" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/" target="_blank" rel="noopener" aria-label="Davin Parturi" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/davin_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Davin Parturi</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Paikallinen parturi siisteihin leikkauksiin ja huoliteltuihin rajauksiin. Helppo asioida, rento tunnelma.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.facebook.com/people/Davin-Parturi/100094396887184/" target="_blank" rel="noopener">Facebook &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="kotipizza" class="tenant-card" itemscope itemtype="https://schema.org/Restaurant">
+        <a class="tenant-card__logo" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener" aria-label="Kotipizza" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/kotipizza_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kotipizza</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Suosikkipizzat nopeasti mukaan tai paikan päällä nautittavaksi. Valikoimassa myös kasvis- ja vegaanivaihtoehtoja.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.kotipizza.fi/ravintolat/masku-maskuntie/" target="_blank" rel="noopener">Sijainti &amp; tilaus &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="lunula" class="tenant-card" itemscope itemtype="https://schema.org/BeautySalon">
+        <a class="tenant-card__logo" href="https://www.lunula.fi/" target="_blank" rel="noopener" aria-label="Kauneushoitola Lunula" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/lunula_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kauneushoitola Lunula</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Hemmottelevia kasvo- ja vartalohoitoja, käsi- ja jalkahoitoja sekä ripset, kulmat ja sokeroinnit – hyvää oloa arkeen.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.lunula.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="ahtinen" class="tenant-card" itemscope itemtype="https://schema.org/ProfessionalService">
+        <a class="tenant-card__logo" href="https://www.ahtinen.com/" target="_blank" rel="noopener" aria-label="Kiinteistö & Notariaatti Ahtinen" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/ahtinen_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kiinteistö &amp; Notariaatti Ahtinen</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Kiinteistönvälitystä ja notariaattipalveluja luotettavasti. Apua asuntokauppoihin, arviolausuntoihin ja sopimusasioihin.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.ahtinen.com/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="riviera" class="tenant-card" itemscope itemtype="https://schema.org/CafeOrCoffeeShop">
+        <a class="tenant-card__logo" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank" rel="noopener" aria-label="Kahvilaravintola Riviera" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/riviera_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Kahvilaravintola Riviera</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Kahvia, pientä purtavaa ja lounasherkkuja päivän piristykseksi. Mukava kohtaamispaikka ostosten lomassa.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.facebook.com/people/Kahvilaravintola-Riviera/61579031109923/" target="_blank" rel="noopener">Facebook &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="masku" class="tenant-card" itemscope itemtype="https://schema.org/FurnitureStore">
+        <a class="tenant-card__logo" href="https://www.masku.com/" target="_blank" rel="noopener" aria-label="Maskun Kalustetalo Humikkala" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/masku_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Maskun Kalustetalo Humikkala</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Laaja valikoima kalusteita kotiin ja pihaan. Inspiroivia sisustusratkaisuja ja kampanjoita ympäri vuoden.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.masku.com/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="mimosan-kukka" class="tenant-card" itemscope itemtype="https://schema.org/Florist">
+        <a class="tenant-card__logo" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener" aria-label="Mimosan kukka" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/mimosan_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Mimosan kukka</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Sidontaa arkeen ja juhlaan: kimput, asetelmat ja tilakoristukset. Myös viherkasveja ja tarvikkeita.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.mimosankukka.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="omasp" class="tenant-card" itemscope itemtype="https://schema.org/BankOrCreditUnion">
+        <a class="tenant-card__logo" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener" aria-label="Oma Säästöpankki Masku" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/omasp_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Oma Säästöpankki</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Henkilökohtaista pankkipalvelua säästämiseen, lainoihin ja päivittäiseen asiointiin. Helppo ajanvaraus verkossa.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.omasp.fi/konttorit/masku" target="_blank" rel="noopener">Konttoritiedot &raquo;</a>
+          </p>
+        </div>
+      </article>
+
+      <article id="taksi-hietanen" class="tenant-card" itemscope itemtype="https://schema.org/TaxiService">
+        <a class="tenant-card__logo" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener" aria-label="Taksi Hietanen" itemprop="url">
+          <span class="logo" style="--logo:url('./assets/logot/taksihietanen_logo.avif');" aria-hidden="true"></span>
+        </a>
+        <div class="tenant-card__body">
+          <h2 class="tenant-card__title" itemprop="name">Taksi Hietanen</h2>
+          <p class="tenant-card__desc" itemprop="description">
+            Luotettavat kyydit arkeen ja juhlaan. Tilaukset kätevästi verkosta tai puhelimitse, myös ennakkotilaukset.
+          </p>
+          <p class="tenant-card__links">
+            <a class="tenant-link" href="https://www.taksihietanen.fi/" target="_blank" rel="noopener">Verkkosivu &raquo;</a>
+          </p>
+        </div>
+      </article>
+
       <!-- TENANTS:END -->
+    </div>
+
+    <div class="btns">
+      <a class="btn" href="./index.html">Palaa etusivulle &raquo;</a>
     </div>
   </main>
 
   <footer id="site-footer" data-partial="./partials/footer.html"></footer>
 
-
   <script src="./app.js" defer></script>
 </body>
-
 </html>
